[gd_scene load_steps=4 format=3 uid="uid://qqbc2x37s5c7"]

[ext_resource type="Script" path="res://MessageData.gd" id="1_jlfg6"]
[ext_resource type="Theme" uid="uid://dulvfjjem5a6x" path="res://goldman_theme.tres" id="2_fu0l1"]
[ext_resource type="Texture2D" uid="uid://4qfrgwy8xkeu" path="res://Untitled.png" id="3_084no"]

[node name="Message" type="HBoxContainer"]
custom_minimum_size = Vector2(553, 0)
offset_right = 607.0
offset_bottom = 50.0
theme_override_constants/separation = 0
script = ExtResource("1_jlfg6")

[node name="Background3" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="Description" type="Label" parent="Background3"]
layout_mode = 2
theme = ExtResource("2_fu0l1")
text = "Haabaa Bubba "

[node name="AccountImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_084no")

[node name="Background" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="Account" type="Label" parent="Background"]
layout_mode = 2
theme = ExtResource("2_fu0l1")
text = "Username: "

[node name="Written Message" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Background2" type="PanelContainer" parent="Written Message"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Message" type="Label" parent="Written Message/Background2"]
layout_mode = 2
theme = ExtResource("2_fu0l1")
text = "Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!"
autowrap_mode = 2
justification_flags = 131
